Fixing glossary letter list spacing

--- a/_sass/_glossary.scss
+++ b/_sass/_glossary.scss
@@ -5,8 +5,7 @@
     border-top: 1px solid $Grey4;
     border-bottom: 1px solid $Grey4;
     .letterLinks {
-      margin-top: $spacing-unit * 2;
-      margin-bottom: $spacing-unit * 2;
+      margin: 0 $spacing-unit * 0.5 0 0;
     }
   }
   .glossaryLetter {
